fix header logo on mobile being cut out

--- a/docs/src/.vuepress/styles/index.styl
+++ b/docs/src/.vuepress/styles/index.styl
@@ -142,7 +142,7 @@ body
 
 body .navbar
   .home-link
-    font-size 28px
+    font-size 20px
     position relative
     white-space nowrap
     .brand
@@ -155,3 +155,18 @@ body .navbar
   .repo-link
     font-size 16px
     font-weight bold
+  .links
+      padding-left 0
+
+@media (min-width: $MQMobile)
+  body .navbar
+    .home-link
+      font-size 28px
+    .nav-link
+      font-size 16px
+      font-weight bold
+    .repo-link
+      font-size 16px
+      font-weight bold
+    .links
+      padding-left 1.5rem
